<resources>
    <string name="app_name">Money Holder</string>
    <string name="week_days">Weekdays</string>
    <string-array name="drawer_cats">
        <item>Home</item>
        <item>Finance</item>
        <item>Statistics</item>
        <item>Debts and credits</item>
        <item>SMS Parsing</item>
        <item>Settings</item>
        <item>Rate app</item>
        <item>Share app</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="cat_ids">
        <item>0</item>
        <item>100</item>
        <item>5</item>
        <item>100</item>
        <item>7</item>
        <item>8</item>
        <item>10</item>
        <item>9</item>
        <item>11</item>
    </string-array>
    <string-array name="statistics_subitems">
        <item>Report by account</item>
        <item>Report by expenses and incomes</item>
        <item>Report by categories</item>
    </string-array>
    <string-array name="statistics_subitems_icons">
        <item>drawer_accountreport</item>
        <item>drawer_incomeexpensereport</item>
        <item>drawer_categoryreport</item>
    </string-array>
    <string-array name="finance_subitems">
        <item>Currencies</item>
        <item>Categories</item>
        <item>Accounts</item>
        <item>Purpose</item>
        <item>Auto operations</item>
    </string-array>
    <string-array name="finance_subitem_icons">
        <item>drawer_currency</item>
        <item>drawer_category</item>
        <item>drawer_account</item>
        <item>drawer_purpose</item>
        <item>drawer_auto</item>
    </string-array>
    <string-array name="debts_subitems">
        <item>Credits</item>
        <item>Debts</item>
    </string-array>
    <string-array name="debts_subitem_icons">
        <item>drawer_credit</item>
        <item>drawer_debts_debt</item>
    </string-array>
    <string-array name="base_currencies">
        <item>Dollars</item>
        <item>Rouble</item>
        <item>Euro</item>
        <item>Hryvnia</item>
        <item> Sterling </item>
        <item> Leo </item>
        <item> Tenge </item>
        <item> The Belarusian ruble </item>
        <item> Armenian Dram </item>
        <item> Shekel </item>
        <item> The yen </item>
        <item> Vaughan </item>
        <item> Moldavian lei </item>
        <item> Lek </item>
        <item> The Algerian Dinar </item>
        <item> Kwanza </item>
        <item> Manat </item>
        <item> Bahraini Dinar </item>
        <item> Such a </item>
        <item> Make </item>
        <item> Real </item>
        <item> Yuan </item>
        <item> Czech Koruna </item>
        <item> Danish Krone </item>
        <item> Egyptian pound </item>
        <item> Cedi </item>
        <item> The forint </item>
        <item> Indian Rupee </item>
        <item> Indonesian rupiah </item>
        <item> The Iranian Rial </item>
        <item> Iraqi Dinar </item>
        <item> The Jordanian Dinar </item>
        <item> The Kuwaiti Dinar </item>
        <item> Philippine Peso </item>
        <item> Zloty </item>
        <item> The Qatari Riyal </item>
        <item> Sum </item>
        <item> The Saudi riyal </item>
        <item> The Swiss franc </item>
        <item> The Serbian Dinar </item>
        <item> Bath </item>
        <item> Lear </item>
    </string-array>
    <string-array name="base_abbrs">
        <item>$</item>
        <item>₽</item>
        <item>€</item>
        <item>₴</item>
        <item>£</item>
        <item>лв</item>
        <item>₸</item>
        <item>BYN</item>
        <item>РА</item>
        <item>₪</item>
        <item>¥</item>
        <item>₩</item>
        <item>؋</item>
        <item>L</item>
        <item>.د.ج </item>
        <item>Kz</item>
        <item>АР</item>
        <item>.د.ب </item>
        <item>৳</item>
        <item>KM</item>
        <item>R$</item>
        <item>¥</item>
        <item>Kč</item>
        <item>kr</item>
        <item>.ج.م</item>
        <item>﷼₵</item>
        <item>Ft</item>
        <item>₹</item>
        <item>Rp</item>
        <item>﷼</item>
        <item>.د.ع</item>
        <item>.د.إ</item>
        <item>.د.ك</item>
        <item>₱</item>
        <item>zł</item>
        <item>﷼</item>
        <item>uzs</item>
        <item>﷼</item>
        <item>₣</item>
        <item>din</item>
        <item>฿</item>
        <item>₺</item>
    </string-array>
    <string-array name="currency_ids">
        <item>currency_1</item>
        <item>currency_2</item>
        <item>currency_3</item>
        <item>currency_4</item>
        <item>currency_5</item>
        <item>currency_6</item>
        <item>currency_7</item>
        <item>currency_8</item>
        <item>currency_9</item>
        <item>currency_10</item>
        <item>currency_11</item>
        <item>currency_12</item>
        <item>currency_13</item>
        <item>currency_14</item>
        <item>currency_15</item>
        <item>currency_16</item>
        <item>currency_17</item>
        <item>currency_18</item>
        <item>currency_19</item>
        <item>currency_20</item>
        <item>currency_21</item>
        <item>currency_22</item>
        <item>currency_23</item>
        <item>currency_24</item>
        <item>currency_25</item>
        <item>currency_26</item>
        <item>currency_27</item>
        <item>currency_28</item>
        <item>currency_29</item>
        <item>currency_30</item>
        <item>currency_31</item>
        <item>currency_32</item>
        <item>currency_33</item>
        <item>currency_34</item>
        <item>currency_35</item>
        <item>currency_36</item>
        <item>currency_37</item>
        <item>currency_38</item>
        <item>currency_39</item>
        <item>currency_40</item>
        <item>currency_41</item>
        <item>currency_42</item>
    </string-array>
    <string-array name="currency_costs">
        <item>1.0</item>
        <item>0.0154</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
    </string-array>
    <string-array name="home">
        <item>Repair</item>
        <item>Electric</item>
        <item>GAZ</item>
        <item>Taxes</item>
        <item>Water(cold)</item>
        <item>Water(hot)</item>
        <item>Heating</item>
        <item>Cable TV</item>
    </string-array>
    <string name="always_remember">Do not forget to make your payments and we are happy to help you save your budget!</string>
    <string name="pay">Pay</string>
    <string name="months">Months</string>
    <string name="language">Language</string>
    <string name="choose_language">Select language</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Daily notification ON/OFF</string>
    <string name="general_notif">general_notif</string>
    <string name="filters">Filters</string>
    <string name="finance">Finance</string>
    <string name="filter_title">Filter</string>
    <string name="filter_subtitle">Set the filter for the report</string>
    <string name="sync">Synchronization</string>
    <string name="setting_save">Save database to root folder</string>
    <string name="save">Save</string>
    <string name="setting_repair">Restore database from root folder</string>
    <string name="repair">Restore</string>
    <string name="planning_notif_entry">hour</string>
    <string name="planning_notif_summary">Set notice time</string>
    <string name="planning_notif_title">Notice time</string>
    <string name="google_sync">Google sync</string>
    <string name="backup">Download Database</string>
    <string name="backup_summary">Loads the latest data from your Google Account</string>
    <string name="google_logout">Log out</string>
    <string name="amount">Amount:</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="paid_date">Payment date:</string>
    <string name="when_you_paid">When will you pay?</string>
    <string name="from_account">Account:</string>
    <string name="how_much_you_paid">The payment amount</string>
    <string name="do_you_want_note">Enter your notes</string>
    <string name="this_amount_will_absorb_your_credit">Partial or full payment</string>
    <string name="balance_title">Show balance</string>
    <string name="balance_summary">Select a calculating method of balance</string>
    <string name="sbrosit">Reset</string>
    <string name="sbrosit_about">All datas and settings will be deleted</string>
    <string name="sbrosit_title">Reset</string>
    <string name="secure_on">Enable security</string>
    <string name="izmenit_parol">Change password</string>
    <string name="securee">Security</string>
    <string name="period">Period</string>
    <string name="count_pages">Count of pages</string>
    <string name="pages_about">Expanse and Income pages</string>
    <string name="balance_invis">Dont show balance</string>
    <string name="summa">Sum</string>
    <string name="comment_">Comment</string>
    <string name="comment_eg">Comment ....</string>
    <string name="enter_value">Enter value</string>
    <string name="enter_date">Set date</string>
    <string name="note">Note</string>
</resources>