<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--PreferenceCategory android:title="@string/language"-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/language" />
    <ListPreference
        android:defaultValue='@string/language_default'
        android:dialogIcon="@drawable/remove_red"
        android:entries="@array/language_titles"
        android:entryValues="@array/language_values"
        android:key="language"
        android:selectable="true"
        android:summary="@string/choose_language" />
    <!--<PreferenceCategory android:title="@string/finance">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="Main window" />
    <Preference
        android:key="mainwind"
        android:summary="@string/pages_about"
        android:title="@string/count_pages" />
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/finance" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/balance_mode_titles"
        android:entryValues="@array/balance_mode_values"
        android:key="balance_solve"
        android:selectable="true"
        android:summary="@string/balance_summary"
        android:title="@string/balance_title" />
    <!--<PreferenceCategory android:title="@string/notifications">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/notifications" />
    <CheckBoxPreference
        android:defaultValue="@bool/notif_default"
        android:key="general_notif"
        android:summary="@string/notifications_summary"
        android:title="@string/notifications" />
    <com.jim.pocketaccounter.utils.TimePreference
        android:defaultValue="08:00"
        android:dependency="@string/general_notif"
        android:dialogLayout="@layout/time_preference"
        android:entries="@string/planning_notif_entry"
        android:key="planningNotifTime"
        android:showDefault="true"
        android:summary="@string/planning_notif_summary"
        android:title="@string/planning_notif_title" />
    <!--<PreferenceCategory android:title="@string/filters">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/filters" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/filter_titles"
        android:entryValues="@array/filter_value"
        android:key="report_filter"
        android:summary="@string/filter_subtitle"
        android:title="@string/filter_title" />
    <!--<PreferenceCategory android:title="@string/sync">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/sync" />
    <Preference
        android:key="save"
        android:summary="@string/setting_save"
        android:title="@string/save" />
    <Preference
        android:key="load"
        android:summary="@string/setting_repair"
        android:title="@string/repair" />
    <!--<PreferenceCategory android:title="@string/google_sync">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/google_sync" />
    <Preference
        android:key="backup"
        android:summary="@string/backup_summary"
        android:title="@string/backup" />
    <Preference
        android:key="logout"
        android:title="@string/google_logout" />
    <!--<PreferenceCategory      android:title="@string/securee">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/securee" />
    <CheckBoxPreference
        android:defaultValue="@bool/secure_default"
        android:key="secure"
        android:title="@string/secure_on" />
    <com.jim.pocketaccounter.utils.PasswordPreference
        android:dependency="secure"
        android:key="password"
        android:title="@string/izmenit_parol" />
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="Widget" />
    <CheckBoxPreference
        android:defaultValue="@bool/widget_def"
        android:key="securewidget"
        android:title="@string/balance_invis" />
    <!--<PreferenceCategory        android:title="@string/sbrosit_title">-->
    <Preference
        android:layout="@layout/my_pref_layout"
        android:selectable="false"
        android:title="@string/sbrosit_title" />
    <Preference
        android:key="sbros"
        android:summary="@string/sbrosit_about"
        android:title="@string/sbrosit" />
</PreferenceScreen>
