<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <ImageView
            android:id="@+id/ivInfoDebtBorrowCancel"
            android:layout_width="@dimen/twentyfive_dp"
            android:layout_height="@dimen/twentyfive_dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/cancel_sign" />
        <ImageView
            android:id="@+id/ivInfoDebtBorrowSave"
            android:layout_width="@dimen/twentyfive_dp"
            android:layout_height="@dimen/twentyfive_dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/check_sign" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date "
        android:textSize="@dimen/twenty_sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etInfoDebtBorrowDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_date"
            android:textColorHint="#cfc7c7" />
        <Spinner
            android:id="@+id/spInfoDebtBorrowAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:textSize="@dimen/twenty_sp" />
    <EditText
        android:id="@+id/etInfoDebtBorrowPaySumm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_value"
        android:textColorHint="#bcacac" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_" />
    <EditText
        android:id="@+id/etInfoDebtBorrowPayComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/twentyfive_dp"
        android:hint="@string/comment_eg"
        android:textColorHint="#bcacac" />
</LinearLayout>