<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light2"
        android:gravity="right">
        <ImageView
            android:id="@+id/ivInfoDebtBorrowCancel"
            android:layout_width="@dimen/twentyfive_dp"
            android:layout_height="@dimen/twentyfive_dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/cancel_sign" />
        <ImageView
            android:id="@+id/ivInfoDebtBorrowSave"
            android:layout_width="@dimen/twentyfive_dp"
            android:layout_height="@dimen/twentyfive_dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/check_sign" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="@dimen/ten_dp"
        android:background="@color/green_light_forline" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_date"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
                <EditText
                    android:id="@+id/etInfoDebtBorrowDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="right"
                    android:hint="@string/when_you_paid"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
                <EditText
                    android:id="@+id/etInfoDebtBorrowPaySumm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:hint="@string/how_much_you_paid"
                    android:inputType="numberDecimal"
                    android:maxLength="13"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/is_calc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/tvamoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/five_dp"
                    android:text="@string/from_account"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
                <Spinner
                    android:id="@+id/spInfoDebtBorrowAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tvamoint"
                    android:gravity="right"
                    android:hint="@string/how_much_you_paid"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
                <EditText
                    android:id="@+id/etInfoDebtBorrowPayComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:hint="@string/do_you_want_note"
                    android:maxLength="100"
                    android:textColor="@color/black_for_glavniy_text"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="@dimen/five_dp"
        android:background="@color/green_light_forline" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:text="@string/this_amount_will_absorb_your_credit"
            android:textColor="@color/black_for_glavniy_text"
            android:textSize="@dimen/twelve_sp" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:paddingBottom="@dimen/thirty_dp"
            android:text="@string/always_remember"
            android:textColor="@color/black_for_secondary_text"
            android:textSize="@dimen/ten_sp" />
    </LinearLayout>
</LinearLayout>